--- a/Resources/Prototypes/_Carmine/Entities/SpaceArtillery/temp_weapons.yml
+++ b/Resources/Prototypes/_Carmine/Entities/SpaceArtillery/temp_weapons.yml
@@ -204,7 +204,7 @@
   - type: BatterySelfRecharger
     autoRechargeRate: 125
   - type: BatteryAmmoProvider
-    proto: BulletKineticShuttle
+    proto: ProjectileShipgunBallistic
     fireCost: 50
   - type: Destructible
     thresholds:
