--- a/Resources/Prototypes/_Carmine/OLDTEMPORARY/InventoryTemplates/aghost_inventory_template.yml
+++ b/Resources/Prototypes/_Carmine/OLDTEMPORARY/InventoryTemplates/aghost_inventory_template.yml
@@ -1,34 +1,143 @@
+# CARMINE - EDITED TO MATCH HUMAN BECAUSE OF OUR COOL ASS UI
+
 - type: inventoryTemplate
   id: aghost
   slots:
-    - name: back
-      slotTexture: back
-      slotFlags: BACK
-      slotGroup: SecondHotbar
+    #### HOTBAR SECTION
+    # HOTBAR1: HEAD
+    - name: head
+      slotGroup: Hotbar1
+      slotTexture: head
+      slotFlags: HEAD
+      uiWindowPos: 1,2
+      strippingWindowPos: 1,0
+      displayName: Head
+    # HOTBAR2: MASK
+    - name: mask
+      slotGroup: Hotbar2
+      slotTexture: mask
+      slotFlags: MASK
+      uiWindowPos: 1,1
+      strippingWindowPos: 1,1
+      displayName: Mask
+    # HOTBAR3: UNIFORM
+    - name: jumpsuit
+      slotGroup: Hotbar3
+      slotTexture: uniform
+      slotFlags: INNERCLOTHING
       stripTime: 6
-      uiWindowPos: 2,1
-      strippingWindowPos: 2,4
+      uiWindowPos: 0,0
+      strippingWindowPos: 0,2
+      displayName: Jumpsuit
+    # HOTBAR4: SHOES
+    - name: shoes
+      slotGroup: Hotbar4
+      slotTexture: shoes
+      slotFlags: FEET
+      stripTime: 3
+      uiWindowPos: 1,0
+      strippingWindowPos: 1,3
+      displayName: Shoes
+    ## HANDS GO HERE IN XAML CODE
+    # HOTBAR5: POCKET, BELT, POCKET
+    - name: pocket1
+      slotGroup: Hotbar5
+      slotTexture: pocket
+      fullTextureName: template_small
+      slotFlags: POCKET
+      stripTime: 3
+      uiWindowPos: 0,0
+      strippingWindowPos: 0,4
+      dependsOn: jumpsuit
+      displayName: Pocket 1
+      stripHidden: true
+    - name: belt
+      slotGroup: Hotbar5
+      slotTexture: belt
+      fullTextureName: template_small
+      slotFlags: BELT
+      stripTime: 6
+      uiWindowPos: 2,2
+      strippingWindowPos: 1,5
+      displayName: Belt
+    - name: pocket2
+      slotGroup: Hotbar5
+      slotTexture: pocket
+      fullTextureName: template_small
+      slotFlags: POCKET
+      stripTime: 3
+      uiWindowPos: 2,0
+      strippingWindowPos: 1,4
+      dependsOn: jumpsuit
+      displayName: Pocket 2
+      stripHidden: true
+    # HOTBAR6: BACK + BACK2 (suit storage)
+    - name: back
+      slotGroup: Hotbar6
+      slotTexture: back
+      fullTextureName: template_small
+      slotFlags: BACK
+      stripTime: 6
+      uiWindowPos: 3,0
+      strippingWindowPos: 0,5
       displayName: Back
+      blacklist:
+        tags:
+        - PetOnly
+    - name: suitstorage
+      slotGroup: Hotbar6
+      slotTexture: suit_storage
+      slotFlags:   SUITSTORAGE
+      stripTime: 3
+      uiWindowPos: 1,0
+      strippingWindowPos: 2,5
+      dependsOn: outerClothing
+      dependsOnComponents:
+      - type: AllowSuitStorage
+      displayName: Suit Storage
+    #### INVENTORY SECTION
+    # TOP ROW: EARS, ----, EYES
+    - name: ears
+      slotTexture: ears
+      slotFlags: EARS
+      stripTime: 3
+      uiWindowPos: 0,6
+      strippingWindowPos: 2,0
+      displayName: Ears
+    - name: eyes
+      slotTexture: glasses
+      slotFlags: EYES
+      stripTime: 3
+      uiWindowPos: 2,6
+      strippingWindowPos: 0,0
+      displayName: Eyes
+    # MIDDLE ROW - GLOVES, ----, NECK
+    - name: gloves
+      slotTexture: gloves
+      slotFlags: GLOVES
+      uiWindowPos: 0,5
+      strippingWindowPos: 2,2
+      displayName: Gloves
+    - name: neck
+      slotTexture: neck
+      slotFlags: NECK
+      uiWindowPos: 2,5
+      strippingWindowPos: 0,1
+      displayName: Neck
+    # BOTTOM ROW - ID, ----, OUTER CLOTHING
     - name: id
       slotTexture: id
       fullTextureName: template_small
       slotFlags: IDCARD
-      slotGroup: SecondHotbar
       stripTime: 6
-      uiWindowPos: 2,2
-      strippingWindowPos: 2,3
+      uiWindowPos: 0,4
+      strippingWindowPos: 2,4
+      dependsOn: jumpsuit
       displayName: ID
-
-    # For drip reasons.
-    - name: head
-      slotTexture: head
-      slotFlags: HEAD
-      uiWindowPos: 0,2
-      strippingWindowPos: 0,0
-      displayName: Head
-    - name: mask
-      slotTexture: mask
-      slotFlags: MASK
-      uiWindowPos: 0,1
-      strippingWindowPos: 1,1
-      displayName: Mask
+    - name: outerClothing
+      slotTexture: suit
+      slotFlags: OUTERCLOTHING
+      stripTime: 6
+      uiWindowPos: 2,4
+      strippingWindowPos: 1,2
+      displayName: Suit
