fix 3 (remove genericsteel crate)

--- a/Resources/Prototypes/_Carmine/Base/crate_base.yml
+++ b/Resources/Prototypes/_Carmine/Base/crate_base.yml
@@ -67,7 +67,7 @@
   - type: RequireProjectileTarget
 
 - type: entity
-  parent: CrateGeneric
+  parent: CrateAluminium
   id: CrateBaseWeldable
   categories: [ HideSpawnMenu ]
   components:
