--- a/Resources/Prototypes/_Carmine/OLDTEMPORARY/Paintables/crate_groups.yml
+++ b/Resources/Prototypes/_Carmine/OLDTEMPORARY/Paintables/crate_groups.yml
@@ -3,26 +3,26 @@
   cost: 2
   defaultStyle: basic
   styles:
-    basic: CrateGenericSteel
-    electrical: CrateGenericSteel #CARMINE TODO:
-    engineering: CrateGenericSteel
-    radiation: CrateGenericSteel
-    science: CrateGenericSteel
-    surgery: CrateGenericSteel
+    basic: CrateAluminium
+    electrical: CrateAluminium #CARMINE TODO:
+    engineering: CrateAluminium
+    radiation: CrateAluminium
+    science: CrateAluminium
+    surgery: CrateAluminium
 
 - type: paintableGroup
   id: CrateSecure
   cost: 2
   defaultStyle: basic
   styles:
-    basic: CrateGenericSteel
-    chemistry: CrateGenericSteel
-    command: CrateGenericSteel
-    engineering: CrateGenericSteel
-    hydroponics: CrateGenericSteel
-    medical: CrateGenericSteel
-    plasma: CrateGenericSteel
-    private: CrateGenericSteel
-    science: CrateGenericSteel
-    secgear: CrateGenericSteel
-    weapon: CrateGenericSteel
+    basic: CrateAluminium
+    chemistry: CrateAluminium
+    command: CrateAluminium
+    engineering: CrateAluminium
+    hydroponics: CrateAluminium
+    medical: CrateAluminium
+    plasma: CrateAluminium
+    private: CrateAluminium
+    science: CrateAluminium
+    secgear: CrateAluminium
+    weapon: CrateAluminium
